--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.1.0",
+    "antd": "^5.26.7",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
