--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.1.0",
     "antd": "^5.26.7",
+    "lowdb": "^7.0.1",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
